# PlotApp

./: README.md  build.bat  pyproject.toml
plotapp/: DataInputBox.py  ImageViewer.py  MainWindow.py  SliderWithDisplay.py  WarningBox.py  __init__.py  data_images.py  data_specifications.py  data_values.py  font.py  fonttable.py  posdummy.py
plotapp/data/: Probe 3.py  Prueba.py  Prueba1.py  data_values.py  data_values_probe.py  data_values_test.py
plotapp/files/: qcheckcombobox.py  warnings.py
test/: test.py
